--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,3 +9,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.test {
+  background-color: #ffffff;
+}
